form responsiveness on mobile is fixed

--- a/style.css
+++ b/style.css
@@ -797,7 +797,7 @@ nav {
 .contact-text a,
 .contact-text p {
   color: #f0f0f0;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   text-decoration: none;
   transition: all 0.3s ease;
   position: relative;
